# 2-uzduotis-2

./: .gitignore  GenerateFile.cpp  GenerateFile.h  Main.cpp  PrintResults.cpp  PrintResults.h  README.md  ReadData.cpp  ReadData.h  Student.cpp  Student.h  studentai.cpp  studentai_su_c_masyvais.cpp
Deque/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Choices.cpp  Choices.h  GenerateFile.cpp  GenerateFile.h  Main.cpp  Makefile  PrintResults.cpp  PrintResults.h  ReadData.cpp  ReadData.h  Student.h
Deque-2/: Benchmark.cpp  Choices.cpp  Choices.h  GenerateFile.cpp  GenerateFile.h  Main.cpp  Makefile  PrintResults.cpp  PrintResults.h  Random.h  ReadData.cpp  ReadData.h  Student.cpp  Student.h
List/: Benchmark.cpp  Benchmark.h  Choices.h  GenerateFile.cpp  GenerateFile.h  List  Main.cpp  Makefile  PrintResults.cpp  PrintResults.h  ReadData.cpp  ReadData.h  Student.cpp  Student.h
List-2/: Benchmark.cpp  Choices.cpp  GenerateFile.cpp  Main.cpp  Makefile  PrintResults.cpp  PrintResults.h  ReadData.cpp  ReadData.h
Students/: Benchmark.cpp  Choices.cpp  Choices.h  Main.cpp  Makefile  Person.h  PrintResults.cpp  PrintResults.h  Random.cpp  ReadData.cpp  Student.cpp  Student.h  Students  Tests  Tests.cpp
Vector/: Benchmark.cpp  Choices.cpp  Choices.h  GenerateFile.cpp  Main.cpp  Makefile  PrintResults.cpp  PrintResults.h  ReadData.cpp  ReadData.h  Student.h  Vector
Vector-2/: Benchmark.cpp  Benchmark.h  Choices.cpp  GenerateFile.cpp  GenerateFile.h  Main.cpp  Makefile  PrintResults.cpp  PrintResults.h  ReadData.cpp  Student.cpp  Student.h
doxygen/: Doxyfile
(+103 files in other folders)
